@@ -13,3 +13,11 @@
   <b>Body</b><br />
   <%= text_area 'recipe', 'body', :style =>'width:600px; height: 400px;' %>
 </p>
+
+<%= observe_field "recipe_body", :frequency => 2.5, :with => "Form.Element.serialize('recipe_body')", :url => preview_recipes_url%>
+
+<fieldset class="fieldset" id="preview_fieldset" style="display:none">
+  <legend>Code-Preview</legend>
+  <div id="preview" style="display"></div>
+</fieldset>
+<br/>
